# python-cstruct changelog

## 1.0

2013-08-19

### Added

- initial version

## 1.2

2017-05-18

### Improved

- initialize all values to 0 by default
- new data types

### Added

- who.py example
- a changelog :)

## 1.3

2017-05-21

### Fix

- default value fix

## 1.4

2017-06-02

### Fix

- default value fix

## 1.5

2017-07-22

### Fix

- compatibiliy fix

### 1.6

2017-12-12

### Fix

- fixed size of 64-bit integers, they now have 64 bits, not 32

### 1.7

2018-03-14

### Improved

- add support for // comments

### 1.8

2018-10-30

### Improved

- add *_t types

### Fix

- fix Python 2.5 support in main module
- examples fix

### 1.9

2019-07-09

### Improved

- drop Python < 2.6 support

### Added

- flexible array parsing
- union initial support

### 2.0

2020-04-11

### Improved

- drop Python 2 support

### 2.1

2020-10-09

### Improved

- refactoring
