@@ -1,0 +1,58 @@
+name: Tests
+
+on:
+  push:
+  pull_request:
+
+jobs:
+  tests:
+    name: Run tests (Python ${{matrix.python}}
+
+    strategy:
+      matrix:
+        python:
+        - "3.6"
+        - "3.7"
+        - "3.8"
+        - "3.9"
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python }}
+
+    - name: Cache pip
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-python-${{ matrix.python }}-pip-${{ hashFiles('**/requirements*.txt') }}-git-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-python-${{ matrix.python }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          ${{ runner.os }}-python-${{ matrix.python }}-pip-
+          ${{ runner.os }}-python-${{ matrix.python }}-
+          ${{ runner.os }}-python
+          ${{ runner.os }}-
+
+    - name: Upgrade pip and install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools wheel
+        python -m pip install -r requirements.txt
+
+    - name: Run tests
+      run: python setup.py test
+
+  all_done:
+    name: Tests done
+    runs-on: ubuntu-latest
+    needs: [tests]
+
+    steps:
+      - name: All done
+        run: echo 1
