@@ -4,3 +4,4 @@ mypy
 sphinx
 tox
 black
+twine<3.4
